--- a/Credits.html
+++ b/Credits.html
@@ -130,7 +130,7 @@ span.psw {
 }
 </style>
 
-<video autoplay muted loop id="myVideo" style="width:120%;
+<video autoplay muted loop id="myVideo" style=" top: 0%; left: 0%; width:120%;
   height:100%;
   object-fit:cover;">
   <source src="MenuTextures/Credits.mp4" type="video/mp4">
@@ -145,7 +145,8 @@ span.psw {
     video.pause();
   }
 }
-
+</script>
+<p style="position: absolute; top: 10%; left: 45%; color: #ffffff; text-align: center;">GAME DEVELOPERS<br/><br/>Nathan Sturgeon<br/>Conner Cullity</p>
 <a href="index.html">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
 </a>
