--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -241,8 +241,9 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Pewdiepie.png"></img>
     </div>
     <div class="square"></div>
+    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/Ak5.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
-    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: Ak 5 </p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
@@ -279,9 +280,11 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Tortue.png"></img>
     </div>
     <div class="square"></div>
+    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/MG-42.png"></img>
+    <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/Glock17.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
-    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
-    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: MG-42</p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: Glock 17</p>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
@@ -315,8 +318,9 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Javelin.png"></img>
     </div>
     <div class="square"></div>
+    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/BerettaARX160.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
-    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: Beretta ARX 160</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
