--- a/Barracks.html
+++ b/Barracks.html
@@ -20,66 +20,13 @@
       <title>Siege XY</title>
       <body background = "MenuTextures/Barracks.jpg" >
       <style>
-      body {font-family: Arial, Helvetica, sans-serif;}
-      .dropdown {
+      body {
+        font-family: Arial, Helvetica, sans-serif;
       }
 
 
-      .dropdown-content {
-        display: none;
-        position: absolute;
-         top: 84%;
-         left: 50%;
-         margin-top: -10%;
-         margin-left: -10%;
-         width: 20%;
-        background-color: #606060;
-        z-index: 1;
-        text-align: CENTER;
-        width: 20%;
-      }
-
-      .dropdown-content a {
-        color: white;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-      }
-
-      .dropdown-content a:hover {background-color: #ddd;}
-
-      .dropdown:hover .dropdown-content {display: block;}
-
-      .dropdown:hover .dropbtn {background-color: #404040;}
-
-      /* Full-width input fields */
-      input[type=text], input[type=password] {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
-      }
-
-          button {
-        background-color: #404040;
-        color: white;
-        padding: 14px 20px;
-        margin: auto;
-        border: none;
-        cursor: pointer;
-        width: 20%;
-        position: absolute;
-      }
-          button:hover {
-          opacity: 0.8;
-          }
-
-          picture:hover{
-          }
-
-          .cancelbtn {
+      /* Set a style for all buttons */
+      button {
         background-color: #404040;
         color: white;
         padding: 14px 20px;
@@ -87,14 +34,49 @@
         border: none;
         cursor: pointer;
         width: 20%;
+        position: absolute;
       }
 
-
-      span.psw {
-        float: right;
-        padding-top: 16px;
+      #myVideo {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        min-width: 100%;
+        min-height: 100%;
       }
 
+      Tortue:hover{
+      opacity: 0.8;
+      }
+
+      p{
+      text-align: center;
+      }
+
+      button:hover {
+        opacity: 0.8;
+      }
+
+      progress:hover {
+
+      }
+
+      text:hover {
+      }
+
+      }
+      body {
+          padding: 0; margin: 0;
+      }
+      canvas {
+          vertical-align: top;
+        }
+      h1, h2, h3, p {
+          text-align: center;
+          font-size: 60;
+          color: white;
+          font-family: "Arial";
+      }
       .square {
         position: absolute;
         top: 35%;
@@ -103,17 +85,16 @@
         width: 370px;
         background-color: rgba(70,70,70,0.6);
       }
-      /* The Modal (background) */
       modal:hover{
       }
       .modal{
         display: none; /* Hidden by default */
         position: fixed; /* Stay in place */
-        z-index: 2; /* Sit on top */
+        z-index: 1; /* Sit on top */
         margin-top: -20%;
         margin-left: -20%;
-        left: 50%;
-        top: 50%;
+        left: 25%;
+        top: 70%;
         width: 30%; /* Full width */
         height: 40%; /* Full height */
         overflow: auto; /* Enable scroll if needed */
@@ -121,32 +102,15 @@
         background-color: rgba(40,40,40,0.6);
         padding-top: 60px;
       }
-
-
-      @-webkit-keyframes animatezoom {
-        from {-webkit-transform: scale(0)}
-        to {-webkit-transform: scale(1)}
-      }
-
-      @keyframes animatezoom {
-        from {transform: scale(0)}
-        to {transform: scale(1)}
-      }
-
-      /* Change styles for span and cancel button on extra small screens */
-      @media screen and (max-width: 300px) {
-        span.psw {
-           display: block;
-           float: none;
-        }
-
-        .show {display: block;}
+      .animate {
+        -webkit-animation: animatezoom 0.6s;
+        animation: animatezoom 0.6s;
       }
       </style>
 </head>
 <body>
 
-  <img onmouseover="document.getElementById('id01').style.display='block" onmouseout="document.getElementById('id01').style.display='none'" srcset="OperatorImages/Tortue.png" style="position: absolute; top: 28%;  left: 60%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Tortue.png">
+  <img onmouseover="document.getElementById('id01').style.display='block" onmouseout="document.getElementById('id01').style.display='none'" srcset="OperatorImages/Tortue.png" style="position: absolute; top: 28%;  left: 60%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Tortue.png">
   <img srcset="OperatorImages/Pewdiepie.png" style="position: absolute; top: 28%;  left: 67%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Pewdiepie.png">
   <img srcset="OperatorImages/BulletPoint.png" style="position: absolute; top: 42%;  left: 67%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Bullet Point.png">
   <img srcset="OperatorImages/Vision.png" style="position: absolute; top: 42%;  left: 60%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Vision.png">
@@ -166,7 +130,6 @@
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 56%;  left: 30%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
   <img srcset="OperatorImages/Whisper.png" style="position: absolute; top: 28%;  left: 30%; margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Whisper.png">
 
-
   <div id="id01" class="modal">
     <form class="modal-content animate" action="/Barracks.html">
       <div class="container">
@@ -175,7 +138,6 @@
       </div>
     </form>
   </div>
-
 <p style="position: absolute; top: 5%; left: 55%; font-size: 40; color:#ffffff;">Attackers</p>
 <p style="position: absolute; top: 5%; left: 30%; font-size: 40; color:#ffffff;">Defenders</p>
 <a href="index.html">
