--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -184,7 +184,7 @@ window.addEventListener("load", function(){
 <p id="timer" style=" pointer-events: none; user-select:none;position: absolute; top:5%; left:50%; margin-top: -25px; margin-left: -25px;width: 50px;height: 50px; text-align: center;"></p>
 
 <a href="TrainStation.html">
-  <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Tortue.png">
+  <img onmouseover="document.getElementById('id04').style.display='block'" onmouseout="document.getElementById('id04').style.display='none'" srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Tortue.png">
 </a>
 
 <a href="TrainStation.html">
@@ -195,7 +195,7 @@ window.addEventListener("load", function(){
   <img onmouseover="document.getElementById('id03').style.display='block'" onmouseout="document.getElementById('id03').style.display='none'" srcset="OperatorImages/BulletPoint.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Bullet Point.png">
 </a>
 <a href="TrainStation.html">
-  <img onmouseover="document.getElementById('id05').style.display='block'" onmouseout="document.getElementById('id05').style.display='none'" srcset="OperatorImages/Vision.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Vision.png">
+  <img onmouseover="document.getElementById('id05').style.display='block'" onmouseout="document.getElementById('id05').style.display='none'" srcset="OperatorImages/Vision.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Vision.png">
 </a>
 <a href="TrainStation.html">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
@@ -223,8 +223,9 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Blackout.png"></img>
     </div>
     <div class="square"></div>
+     <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/BlackoutsF88Austeyr.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
-    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: F88 Austeyr</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
@@ -300,8 +301,9 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Vision.png"></img>
     </div>
     <div class="square"></div>
+    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/FBBerylVisionGun.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
-    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: FB Beryl</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
@@ -337,8 +339,9 @@ window.addEventListener("load", function(){
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Ricochet.png"></img>
     </div>
     <div class="square"></div>
+    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/M4.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
-    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: M4</p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
