--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -289,7 +289,7 @@ window.addEventListener("load", function(){
 <div id="id05" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
-      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Outlast</p>
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Outlook</p>
       <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">His mask does and AOE that can be used to detect enemies through walls pinging their location for him. This only can be used every 20 seconds.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Outlook.png"></img>
     </div>
