--- a/TrainStation.html
+++ b/TrainStation.html
@@ -83,6 +83,7 @@ div#load_screen > div#loading{
         margin-left: -37.5px;
         top:50%;
         left:50%;
+        transform-origin: 30% 50%;
       }
       /* #terrorist1{
        position: absolute;
