--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -224,9 +224,10 @@ window.addEventListener("load", function(){
     </div>
     <div class="square"></div>
      <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/BlackoutsF88Austeyr.png"></img>
+     <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/SIGSauerP226.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: F88 Austeyr</p>
-    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: SIG Sauer P226</p>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
     <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
@@ -243,6 +244,7 @@ window.addEventListener("load", function(){
     </div>
     <div class="square"></div>
     <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/Ak5.png"></img>
+    <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/Tokarev.png"></img>
     <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
     <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: Ak 5 </p>
     <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
